<resources>
    <string name="app_name">RutaCovid-Cauca</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="ingrese_correo_electronico">Ingrese su correo electrónico</string>
    <string name="ingrese_contrasena">Ingrese su contraseña</string>
    <string name="se_ha_olvidado_de_contrasena">Olvido su contraseña?</string>
    <string name="restaurar_contrasena">Restaurar Contraseña</string>
    <string name="el_usuario_no_registrado">El usuario no está registrado</string>
    <string name="este_valor_requerido">Este valor es requerido</string>

    <string name="info_reestablecer_contrasena">A su correo le llegará un link el cual le permitirá reestablecer su contraseña al seleccionar ACEPTAR.</string>
    <string name="hay_un_error_actualizar_contra">Hay un error en la actualización, por favor intentarlo de nuevo.</string>
    <string name="las_contrasena_actual_no_coincide">La contraseña actual no es la correcta.</string>
    <string name="a_ocurrido_un_error">A ocurrido un error, por favor intentalo de nuevo.</string>
    <string name="se_le_ha_enviado_un_correo">Se le ha enviado un correo para restablecer su contraseña, por favor espere a que este llegue.</string>
    }
    <string name="a_ocurrido_un_error_afuera">A ocurrido un error, revise si el correo escrito si ha estado registrado.</string>


    <string name="registro_usuario">Registro de Usuario</string>
    <string name="correo_electronico">Correo electrónico(*)</string>
    <string name="contrasena">Contraseña(*)</string>
    <string name="confirmar_contrasena">Confirmar contraseña(*)</string>

    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="contrasenas_no_coinciden">Las contraseñas no coinciden</string>
    <string name="contrasena_muy_corta">La contraseña es muy corta.</string>
    <string name="contrasena_muy_corta_m2">La contraseña es muy corta, por favor ingrese una contraseña  igual o mayor a 8 caracteres.</string>
    <string name="revise_datos">Por favor revise sus datos, algunos son requeridos.</string>
    <string name="mensaje_de_inicio">Por favor ingresa con tu nueva cuenta.</string>
    <string name="registrar">Registrar</string>
    <string name="actualizar">Actualizar</string>
    <string name="actualizar_contrasena">Actualizar o reinciar contraseña.</string>
    <string name="todo">Todo</string>
    <string name="Edad">Edad</string>
    <string name="Identificacion">Identificación</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Telefono</string>
    <string name="select_departamento">Seleccione un departamento...</string>
    <string name="select_municipio">Seleccione un municipio...</string>


    <string name="preguntaPrincipal">¿Siente usted AHOGO o dificultad para respirar?</string>
    <string name="botonSi">Si</string>
    <string name="botonNo">No</string>
    <string name="paciente5">Paciente con riesgo de IRA Grave</string>
    <string name="urgencias">Urgencias</string>
    <string name="pregunta2">¿Ha tenido: fiebre, tos, dolor de garganta, dolor muscular, náuseas, vómito o diarrea, sin dificultad respiratoria?</string>
    <string name="Paciente4">Paciente con infección respiratoria aguda, baja probabilidad de covid-19</string>
    <string name="manejodesintomas">Manejo de síntomas en casa, con hidratación, lavado de manos, tapabocas y SIGNOS DE ALARMA</string>
    <string name="manejodelossintomas">Manejo de los síntomas según indicación telefónica+ prueba covid</string>
    <string name="Asintomatico">Asintomático con nexo epidemiológico</string>
    <string name="aislamientoencasa">Aislamiento en casa(por 14 días)</string>
    <string name="recomendaciones">Recomendaciones para el caso y la familia</string>
    <string name="seguimientosclinicos">Seguimiento clínico(sera contactado telefonicamente)</string>
    <string name="tienefactoresde">¿Tiene factores de riesgo? \n\n Mayores de 60 años o en las personas con comorbilidad o condiciones, tales como: \n\n * Diabetes * Enfermedad cardiovascular(incluye HTA y AVC) * VIH * CANCER * enfermedades o medicamentos que debiliten sus defensas *EPOC * Fumandores</string>
    <string name="asintomaticosinnexo">Asintomático sin nexo epidemiológico con factores de riesgo </string>
    <string name="aislamientointesificado">Aislamiento intensificado</string>
    <string name="asintomaticosin">Asintomático sin nexo epidemiológico sin factores de riesgo</string>
    <string name="distanciamiento">Distanciamiento social y medidas prebentivas</string>
    <string name="pregunta3">¿Ha estado por fuera de país en los últimos 14 dias o ha tenido contacto estrecho con caso confirmado de COVID-19?</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="masInformacion">Leer más</string>


    <string name="avisoInicial">Aviso INICIAL \n “Esta aplicación NO HACE UN DIAGNÓSTICO de Infección por COVID 19 u otras patologías. Se usará para guiarlo/a según los datos que usted  va a suministrar y en caso de ser necesario brindarle acompañamiento”</string>
    <string name="condicionesLegales">Da su consentimiento expreso e informado para llevar a cabo el tratamiento de sus datos personales, acceso a información clínica, resultados de laboratorio y seguimiento, por parte del personal relacionado con la atención y recepción de información en el Departamento del Cauca frente a casos sospechosos de COVID-19. Sus datos serán de uso exclusivo para el campo de la salud con fines de investigación en situación de pandemia, sin fines de lucro o comerciales y no genera ninguna remuneración económica.</string>
    <string name="exportar">Exportar</string>
    <string name="mensaje_exportar">Se va a crear un archivo CSV en la carpeta en CCovid-19 con los datos de todos los usuarios registrados.</string>
    <string name="error_crear_archivo">No se ha podido crear el archivo</string>
    <string name="error_obtener_datos">Hay un error a la hora de obterner los datos, por favor revise su conexión</string>
    <string name="no_hay_datos_registrados">No hay registros en la base de datos.</string>
    <string name="carpeta_ccovid_19">El archivo está en  Documentos/CCovid-19 y se llama: </string>
    <string name="formato_fecha_exportar">dd-MM-yyyy-HH-mm-ss</string>
    <string name="tipo_archivo">.csv</string>
    <string name="caso6">"Diríjase a URGENCIAS Será llamado en máximo 30 min Guarde la calma y lleve: *Tapabocas  *1 Solo acompañante *Ropa en bolsa *Carnet *Dinero  "</string>
    <string name="recomendacion">Recomendación:</string>
    <string name="caso5">"Sintomático leve  con Nexo epidemiológico \n\n Manejo de los síntomas  según indicación telefónica "</string>
    <string name="caso51">"Paciente con infección respiratoria aguda, baja probabilidad de COVID 19  \n\n  Manejo de síntomas en casa  con hidratación , lavado de manos, tapabocas y SIGNOS DE ALARMA "</string>
    <string name="caso4">"Asintomático con nexo epidemiológico  \n\nAislamiento en casa(por 14 días )  \n\nRecomendaciones para el caso y la familia   "</string>
    <string name="caso3">"Asintomático sin nexo epidemiológico con factores de Riesgo  "</string>
    <string name="caso2">"Asintomático sin nexo epidemiológico con factores de Riesgo  \n\n Aislamiento intensificado  "</string>
    <string name="caso1">"Asintomático sin nexo epidemiológico sin factores de Riesgo  \n\nDistanciamiento social  y Medidas preventivas  "</string>
    <string name="mensaje_confirmacion">¿Está seguro de que sus sitomas son esos?</string>
    <string name="alerta_titulo">Alerta</string>
    <string name="inicioSesion">Inicio de sesion</string>
    <string name="error_ubicacion">No se ha podido obtener la ubicación. Por favor actiive el GPS.</string>
    <string name="error_servidor_hora">Error al obtener la hora del servidor. Por favor revise su conexión.</string>
    <string name="activar_gps">Por favor active su GPS y vuelva a hacer la enquesta.</string>
    <string name="reintente_encuesta">Por favor reintente hacer la encuesta.</string>
    <string name="desarrollado">Esta aplicación fue desarrollada por: \n*David Alejandro Popayán \n*Rodrigo Alejandro Guspian</string>
    <string name="permiso_gps">Por favor active el permiso de GPS</string>
    <string name="volver_encuesta">Volver a hacer la encuesta</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="acerca_de">Acerca de</string>
    <string name="informaci_n">Información</string>
    <string name="creditos">Creditos</string>
    <string name="lema">¡Cauca, ante el COVID-19 estamos para ti!</string>
    <string name="error_conexion">Error en conexión, por favor revise su internet.</string>

</resources>
