<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".controllers.MenuP">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/tienefactoresde"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/txtBotonSi"
                android:layout_width="wrap_content"
                android:text="@string/botonSi"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/txtBotonNo"
                android:layout_width="wrap_content"
                android:text="@string/botonNo"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>


        </LinearLayout>




    </LinearLayout>

</LinearLayout>